--- a/css/style.css
+++ b/css/style.css
@@ -1392,6 +1392,91 @@ footer li a {
 }
 
 
+/* --------== contact page ==-------- */
+.contact-data .contact-info {
+   background: #FFFFFF 0% 0% no-repeat padding-box;
+   border: 1px solid #E1E1E1;
+   border-radius: 10px;
+   text-align: center;
+   padding: 1rem;
+   height: 100%;
+}
+
+.contact-data .contact-info h5 {
+   color: #2A2A2A;
+   font-weight: bold;
+}
+
+.contact-data img {
+   width: 22px;
+   margin: 20px 0;
+}
+
+.contact-data h4 {
+   color: #2D2D2D;
+   width: fit-content;
+   margin: 0 auto;
+   padding-bottom: 1.5rem;
+   position: relative;
+}
+
+.contact-data h4::after {
+   content: '';
+   position: absolute;
+   bottom: 0;
+   inset-inline-end: 50%;
+   width: 50px;
+   transform: translateX(-50%);
+   height: 2px;
+   border-radius: 5px;
+   background: var(--mint);
+   -webkit-transform: translateX(-50%);
+   -moz-transform: translateX(-50%);
+   -ms-transform: translateX(-50%);
+   -o-transform: translateX(-50%);
+   -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   -ms-border-radius: 5px;
+   -o-border-radius: 5px;
+}
+
+.phone-num {
+   display: flex;
+   justify-content: space-around;
+   flex-wrap: wrap;
+}
+
+.contact-data .form-control,
+.contact-data textarea {
+   background: transparent;
+   border: 1px solid #E9E9E9;
+   border-radius: 5px;
+}
+
+.contact-data .form-control:focus,
+.contact-data textarea:focus {
+   border-color: var(--mint);
+}
+
+.contact-data textarea {
+   width: 100%;
+   padding: 19px 30px;
+}
+
+.contact .map {
+   overflow: hidden;
+   border-radius: 20px;
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   -ms-border-radius: 20px;
+   -o-border-radius: 20px;
+}
+
+.contact .map iframe {
+   height: 300px;
+   margin-bottom: 3rem;
+}
+
 /* -------- media -------- */
 @media (max-width: 998px) {
    .navbar-collapse {
